# funny_string

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: test.rs
