[package]
name = "FunnyString"
version = "0.1.1"
authors = ["Wouter Pennings"]
edition = "2018"
license = "MIT"
repository = "https://github.com/WouterPennings/string_helper.git"
description = "A small package with string helper functions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
